fixed a regression in visibility of axis tick text in IE.

--- a/peek.css
+++ b/peek.css
@@ -64,7 +64,7 @@
 }
 
 .canvas svg {
-
+  line-height: 14px;
 }
 
 /**********************************************************************************************************************/
